--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^1.18.10"
   },
   "scripts": {
+    "deploy" : "prisma deploy",
     "dev": "nodemon --exec babel-node src/server.js"
   }
 }
