#2-3 Integrating Prisma in our Server

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "scripts": {
     "deploy" : "prisma deploy",
+    "generate" : "prisma generate",
+    "prisma" : "yarn run deploy && yarn run generate",
     "dev": "nodemon --exec babel-node src/server.js"
   }
 }
