--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "morgan": "^1.9.1",
     "nodemailer": "^6.1.0",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "prisma": "^1.29.2"
   },
   "devDependencies": {
